<resources>
    <string name="app_name">Covid Volunteer Site</string>
    <string name="aboutUs">About Us</string>
    <string name="guide">Please read the user guide before exploring our app</string>
    <string name="getStarted">EXPLORE</string>
    <string name="copyRight">"Copyright \u00a9 2021, Huy Vo"</string>
    <string name="welcome">Welcome!</string>
    <string name="userGuide">GUIDE</string>
    <string name="appLogo" />
    <string name="goBack">Back</string>
    <string name="rules">Volunteer Testing is created for seeking a young user that can join to help testing and support concentrated quarantine zones at different locations around VietNam.</string>
    <string name="rule2">To use Volunteer Testing, please create your own account first.Since your account has been successfully created, you will be able to start your new journey.</string>
    <string name="rule3">Volunteer Testing provides many features that can help you to find the most appropriate site.</string>
    <string name="rule4">Don\'t worry, Volunteer Testing will guide you via your journey.</string>
    <string name="ap">appLogo</string>
    <string name="LogIn">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signInTitle">Already Have An Account?</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="newUser">New User? Register Now</string>
    <string name="registerTitle">Don\'t Have An Account Yet</string>
    <string name="register">Register</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="oldUser">Have An Account? Sign In Here.</string>
    <string name="app_logo" />
    <string name="helloUser">Hello, There !</string>
    <string name="userHomeLocation">Location</string>
    <string name="userSearch">Search for a site …</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_location">Location</string>
    <string name="location" />
    <string name="title_activity_site_location">SiteLocation</string>
    <string name="currentLocation" />
    <string name="Volunteerlist">Volunteer List</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="registerEmail">Email</string>
    <string name="Age">Age</string>
    <string name="userHomeLogout">LogOut</string>
    <string name="userSite">Join Site Now !</string>
    <string name="userInfo">Profile</string>
    <string name="userHomeRule">Rule</string>
    <string name="addSite">Create Site</string>
    <string name="maxCapacity">Max Capacity</string>
    <string name="locationType">Type</string>
    <string name="add">Create Site</string>
    <string name="lat">Location Lat</string>
    <string name="lng">Location Lng</string>
    <string name="siteInfo">Site Info</string>
    <string name="leaderName">Leader Name</string>
    <string name="status">Status</string>
    <string name="messageUser">Join Us to see more information about this Site!</string>
    <string name="joinSite">Register YourSelf</string>
    <string name="distance">"Distance "</string>
    <string name="announce">This Site is currently full. Please join another site or comeback later !</string>
    <string name="registerForFriend">Register For Friend</string>
    <string name="friendEmail">Please Enter Your Friend Email</string>
    <string name="enter">Enter</string>
    <string name="checkSite">Check Your Sites !</string>
    <string name="participantList">Sites List</string>
    <string name="siteName">SiteName</string>
    <string name="role">Role</string>
    <string name="siteType">Type</string>
    <string name="pleaseChoose">Select type to filter</string>
    <string name="type1">Hospital</string>
    <string name="type2">Stadium</string>
    <string name="type3">School</string>
    <string name="type4">Factory</string>

    <string name="capacity1">Less than 4</string>
    <string name="capacity2">Less than 8</string>
    <string name="capacity3">Less than 12</string>
    <string name="capacity4">Over 12</string>

    <string name="totalNumber">Less than 4</string>
    <string name="totalNumber2">Less than 8</string>
    <string name="totalNumber3">Less than 12</string>
    <string name="totalNumber4">Over 12</string>

    <string name="totalTestedNumber1">Less than 3</string>
    <string name="totalTestedNumber2">Less than 6</string>
    <string name="totalTestedNumber3">Less than 9</string>
    <string name="totalTestedNumber4">Over 9</string>

    <string name="totalDistance">Less than 3km</string>
    <string name="totalDistance2">Less than 6km</string>
    <string name="totalDistance3">Less than 9km</string>
    <string name="totalDistance4">Over 9km</string>
    <string name="getLocation">My Location</string>
    <string name="list">Volunteers</string>
    <string name="userprofile">User Profile</string>
    <string name="downLoad">Download file</string>
    <string name="guide1">You can add your own site by click join my site and then long click every where on the map.Remember you need to be at least 18 to create new site</string>
    <string name="guide2">You can also register the available site by click the marker of that site and then press register button to join.</string>
    <string name="guide3">You can also register for your friends by enter their emails.Then you can check your sites that you registered or created by choosing check the site!</string>
    <string name="guide4">Only leader can activate get volunteers and update site button!.You can check your personal info by choosing user profile</string>
    <string name="site">Site Name</string>
    <string name="allSites">All Sites</string>
    <string name="run">Run Report</string>
    <string name="seeSites">See All Sites</string>
    <string name="siteDetail">Site Details</string>
    <string name="idRun">Site Id</string>
    <string name="runLeader">Leader</string>
    <string name="testedNumber">Total Tested Number</string>
    <string name="totalVolunteers">Total Volunteers</string>
    <string name="runReport">Download</string>
    <string name="listOfUsers">List Of Users</string>
    <string name="updateSite">Update Site</string>
    <string name="leader">Leader</string>
    <string name="address">Address</string>
    <string name="infoTotalTested">Total Tested</string>
    <string name="update">Update</string>
    <string name="removeBlank">Please clear the container before inputting new value to update details !</string>
    <string name="siteNum" />
    <string name="youSites">Your Sites</string>
    <string name="SeeMore">See More …</string>
</resources>