<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="373dp"
        android:layout_height="149dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary3"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/latSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/lat"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/leaderSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/leaderName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lngSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/lng"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/colorPrimary2"
            android:drawableEnd="@drawable/ic_baseline_play_arrow_24"
            android:text="@string/run"
            android:textColor="@color/white"
            app:cornerRadius="1500dp"
            app:srcCompat="@drawable/ic_baseline_play_arrow_24" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>