<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="394dp"
        android:layout_height="113dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_round"
        android:backgroundTint="@color/colorPrimary2"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/volunter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/username"
            android:textColor="@color/colorPrimary3"
            android:textColorHint="@color/colorPrimary3"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/volunteer_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:text="@string/age"
            android:textColor="@color/colorPrimary3"
            android:textColorHint="@color/colorPrimary3"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/volunteer_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/email"
            android:textColor="@color/colorPrimary3"
            android:textColorHint="@color/colorPrimary3"
            android:textStyle="bold" />
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>